0.5
---

- Initial version.

### Issue Fixes
* [#13](https://github.com/upfrontsystems/izinto-angular/issues/13) add variable model and views
* [#14](https://github.com/upfrontsystems/izinto-angular/issues/14) add collection model and views
* [#14](https://github.com/upfrontsystems/izinto-angular/issues/14) add dashboards in collections reorder
* [#14](https://github.com/upfrontsystems/izinto-angular/issues/14) add pasting dashboards and collections
* [#17](https://github.com/upfrontsystems/izinto-angular/issues/17) add single stat
* [#19](https://github.com/upfrontsystems/izinto-angular/issues/19) add reorder to chart
* [#20](https://github.com/upfrontsystems/izinto-angular/issues/20) add data source
* [#21](https://github.com/upfrontsystems/izinto-angular/issues/21) add logged in user to dashboard and collection
* remove chart selector
* [#29](https://github.com/upfrontsystems/izinto-angular/issues/29) fix reordering of charts and dashboards
* [#24](https://github.com/upfrontsystems/izinto-angular/issues/24) do not filter dashboards in collection by user
* [#35](https://github.com/upfrontsystems/izinto-angular/issues/35) add decimals for rounding chart labels
* [#38](https://github.com/upfrontsystems/izinto-angular/issues/38) remove group by from chart
* [#57](https://github.com/upfrontsystems/izinto-angular/issues/38) can't update user role
* [#63](https://github.com/upfrontsystems/izinto-angular/issues/38) optionally include dashboards in collections list
* [#83](https://github.com/upfrontsystems/izinto-angular/issues/83) filter dashboards by user_id
* [#110](https://github.com/upfrontsystems/izinto-angular/issues/110) include database name in influxdb query